Comment for Keys

--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,10 @@
 
-AWS_BUCKET_NAME = "apoorvdixit8877"
-AWS_BUCKET_REGION = "ap-south-1" 
-AWS_ACCESS_KEY = "AKIA5WXEEE27WIMIXLNB"
-AWS_SECRET_KEY = "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"
 
-MONGO_URL="mongodb+srv://apoorv:apoorv@extension.d43eedq.mongodb.net/?retryWrites=true&w=majority"
+# AWS credentials need to be entered
+AWS_BUCKET_NAME = ""
+AWS_BUCKET_REGION = "" 
+AWS_ACCESS_KEY = ""
+AWS_SECRET_KEY = ""
+
+# Enter mongo URL for cluster
+MONGO_URL = ""
